force-app/main/default/objects/Pipeline_Of_AB__c/Pipeline_Of_AB__c.object-meta.xml
<CustomObject>
    <label>Pipeline Of A/B</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Pipeline Of A/B Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Of A/B</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>