force-app/main/default/objects/Pipeline_Of_AB__c/fields/Current_Month_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Backlog__c</fullName>
    <formula>Total_Projection__c -  Actual_Closed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Backlog</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>