force-app/main/default/objects/Pipeline_Of_AB__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <label>Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>