force-app/main/default/objects/Pipeline_Of_AB__c/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Projections</relationshipName>
    <type>Lookup</type>
</CustomField>