force-app/main/default/objects/Pipeline_Of_AB__c/fields/New_Numbers__c.field-meta.xml
<CustomField>
    <fullName>New_Numbers__c</fullName>
    <label>New Numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>