force-app/main/default/objects/Pipeline_Of_AB__c/fields/Project_Site_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Stage__c</fullName>
    <label>Project Site Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Site_Stage</valueSetName>
    </valueSet>
</CustomField>