force-app/main/default/objects/Pipeline_Of_AB__c/fields/Projection__c.field-meta.xml
<CustomField>
    <fullName>Projection__c</fullName>
    <label>Projection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>