force-app/main/default/objects/Pipeline_Of_AB__c/fields/Qty_of_the_Doors_Projection__c.field-meta.xml
<CustomField>
    <fullName>Qty_of_the_Doors_Projection__c</fullName>
    <label>Qty of the Doors Projection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>