force-app/main/default/objects/Pipeline_Of_AB__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>District</valueSetName>
    </valueSet>
</CustomField>