force-app/main/default/objects/Pipeline_Of_AB__c/fields/Sales_Projection_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Projection_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Sales Projection Date</label>
    <type>Date</type>
</CustomField>