force-app/main/default/objects/Pipeline_Of_AB__c/fields/Sales_Projection_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Projection_Number__c</fullName>
    <displayFormat>SP-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Sales Projection ExtId</label>
    <type>AutoNumber</type>
</CustomField>