force-app/main/default/objects/Pipeline_Of_AB__c/fields/Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Time_Frame__c</fullName>
    <label>Time Frame   / Project Time Line</label>
    <type>Date</type>
</CustomField>