force-app/main/default/objects/Pipeline_Of_AB__c/fields/Time_frame_for_closure_Month__c.field-meta.xml
<CustomField>
    <fullName>Time_frame_for_closure_Month__c</fullName>
    <label>Time frame for closure (Month)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Month_Name</valueSetName>
    </valueSet>
</CustomField>