force-app/main/default/objects/Pipeline_Of_AB__c/fields/Time_frame_for_closure_Year__c.field-meta.xml
<CustomField>
    <fullName>Time_frame_for_closure_Year__c</fullName>
    <label>Time frame for closure (Year)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>