force-app/main/default/objects/Pipeline_Of_AB__c/fields/Total_Projection__c.field-meta.xml
<CustomField>
    <fullName>Total_Projection__c</fullName>
    <formula>Qty_of_the_Doors_Projection__c +  Previous_Month_Backlog__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Projection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>