force-app/main/default/objects/Pipeline_Of_AB__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Projection_Date__c</columns>
    <columns>Business_Clients__c</columns>
    <columns>Firm_Name__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Key_Account__c</columns>
    <columns>Actual_Closed__c</columns>
    <columns>Qty_of_the_Doors_Projection__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Sales_Person_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>